--- a/P1WebAppRazor/Pages/Login.cshtml
+++ b/P1WebAppRazor/Pages/Login.cshtml
@@ -31,13 +31,13 @@
 
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" aria-describedby="emailHelp" name="Email">
+            <input type="email" class="form-control" aria-describedby="emailHelp" name="Email" required >
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
 
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="Password">
+            <input type="password" class="form-control" id="exampleInputPassword1" name="Password" required>
         </div>
 
         <div class="mb-3 form-check">
@@ -46,13 +46,6 @@
         </div>
 
 
-        <p class="text-danger"> 
-        @ViewData["errorMessage"]
-        </p>
-
-           <p class="text-success"> 
-        @ViewData["successMessage"]
-        </p>
         <button type="submit" class="btn btn-primary">Login</button>
 
     </form>
