--- a/P1WebAppRazor/Pages/Shared/_Layout.cshtml
+++ b/P1WebAppRazor/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,13 +10,14 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/P1WebAppRazor.styles.css" asp-append-version="true" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Next Wave</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -27,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
 
-                          <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/contact">Contact Us</a>
                         </li>
                     </ul>
@@ -37,7 +39,34 @@
     </header>
 
 
+
+
     <div class="container">
+
+
+        @{
+
+            if (ViewData["errorMessage"] != null)
+            {
+
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Error</strong> @ViewData["errorMessage"]
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+
+
+            if (ViewData["successMessage"] != null)
+            {
+
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>Success</strong> @ViewData["successMessage"]
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+        
+        }
+
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -55,4 +84,5 @@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
