--- a/P1WebAppRazor/Pages/Login.cshtml
+++ b/P1WebAppRazor/Pages/Login.cshtml
@@ -9,19 +9,6 @@
 }
 
 
-<style>
-    .register_form {
-        max-width: 400px;
-        margin: auto;
-        margin-top: 100px;
-        @* border: 1px solid black ; *@
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.151) ;
-    }
-</style>
-
-
 <div class="register_form">
 
     <h3> Login to your Account </h3>
@@ -40,10 +27,14 @@
             <input type="password" class="form-control" id="exampleInputPassword1" name="Password" required>
         </div>
 
+
+        <p> <a href="/forgotPassword"> Forgot Password ?    </a>  </p>
+
         <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
+
 
 
         <button type="submit" class="btn btn-primary">Login</button>
