--- a/P1WebAppRazor/Pages/Shared/_Layout.cshtml
+++ b/P1WebAppRazor/Pages/Shared/_Layout.cshtml
@@ -64,6 +64,16 @@
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             }
+
+
+              if (TempData["successMessage"] != null)
+            {
+
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>Success</strong> @TempData["successMessage"]
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
         
         }
 
