--- a/P1WebAppRazor/Pages/VerifyOtp.cshtml
+++ b/P1WebAppRazor/Pages/VerifyOtp.cshtml
@@ -20,9 +20,9 @@
         </div>
 
 
-        <div class="mb-3">
+        <div class="mb-3 d-none">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" aria-describedby="emailHelp" name="Email" required >
+            <input type="email" class="form-control" aria-describedby="emailHelp" name="Email" value="@TempData["ResetEmail"]" required readonly >
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
 
