--- a/P1WebAppRazor/Pages/Shared/_Layout.cshtml
+++ b/P1WebAppRazor/Pages/Shared/_Layout.cshtml
@@ -46,26 +46,18 @@
 
         @{
 
-            if (ViewData["errorMessage"] != null)
+    
+              if (TempData["errorMessage"] != null)
             {
 
                 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Error</strong> @ViewData["errorMessage"]
+                    <strong>Error</strong> @TempData["errorMessage"]
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             }
 
 
-            if (ViewData["successMessage"] != null)
-            {
-
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>Success</strong> @ViewData["successMessage"]
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            }
-
-
+    
               if (TempData["successMessage"] != null)
             {
 
